--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,5 +1,6 @@
 ---
 destroy.png: destroy-eeeb62d184418c044849bac79790ef32.png
+favicon.ico: favicon-fb2ee3258dc641aaaa834b501f7166cb.ico
 application.js: application-be2ff399fe051e7b9edb25a578932694.js
 application.css: application-66b54e5dbce6dfe514977839510dea68.css
 jquery.min.map: jquery.min-231e336b130040c09fb505e1c6b0a22e.map
